--- a/package.json
+++ b/package.json
@@ -7,11 +7,12 @@
     "axios": "^1.3.4",
     "firebase": "^7.24.0",
     "moment": "^2.29.4",
+    "netlify-cli": "^14.3.1",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
     "react-router": "^5.0.0",
     "react-router-dom": "^5.0.0",
-    "react-scripts": "3.0.0",
+    "react-scripts": "^5.0.1",
     "styled-components": "^5.3.9"
   },
   "scripts": {
