--- a/package.json
+++ b/package.json
@@ -3,16 +3,19 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@ant-design/react-slick": "^1.0.0",
     "antd": "^5.3.3",
     "axios": "^1.3.4",
     "firebase": "^7.24.0",
     "moment": "^2.29.4",
     "netlify-cli": "^14.3.1",
+    "qrcode.react": "^3.1.0",
     "react": "^18.2.0",
-    "react-dom": "^16.8.6",
+    "react-dom": "^18.2.0",
     "react-router": "^5.0.0",
     "react-router-dom": "^5.0.0",
     "react-scripts": "^5.0.1",
+    "source-map-loader": "^4.0.1",
     "styled-components": "^5.3.9"
   },
   "scripts": {
